[package]
name = "tidy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
serde_derive = "1.0.143"
serde_json = "1.0.82"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.5.9"